# discord_cyberpunk

./: .gitignore  bot_app_tree.py  ficha.py  lista_e_dicionarios.py  main.py  pyproject.toml  service.py
dados/: help.json
dados/arma/: 208419266607710210.pickle  222542367670927363.pickle  284120277753790464.pickle  323979800689770498.pickle
dados/ficha/: 208419266607710210.pickle  284120277753790464.pickle  323979800689770498.pickle
dados/gifs/: acertou.txt  erro_critico.txt  errou.txt
dados/proficiencia/: 208419266607710210.pickle  222542367670927363.pickle  323979800689770498.pickle
services/: combate.py  define.py
